20

* #1164 Bug while starting the turtle activity

17

Introduced keybuilder and custom keymaps to work around limitations in XKB system.  
Translators can now completely specify the keyboard layout via a JSON file.

15

14

11

10

9

8

7

6

5

4

3

2

1

* Initial release.