@@ -1,6 +1,6 @@
 [Activity]
 name = Typing Turtle
-activity_version = 20
+activity_version = 21
 host_version = 1
 service_name = org.laptop.community.TypingTurtle
 icon = Activity-typingturtle
