@@ -1,3 +1,7 @@
+21
+
+* Added a lesson editor.
+
 20
 
 * #1164 Bug while starting the turtle activity
